Added Dot networking, effects for plasma ammo.

--- a/Sniper/Properties/Resources.resx
+++ b/Sniper/Properties/Resources.resx
@@ -205,12 +205,10 @@
     <value>Explosive</value>
   </data>
   <data name="lang__SNIPER_AMMO_PLASMA_DESC" xml:space="preserve">
-    <value>Deals 0% primary damage, applies a stacking burn that deals 215% primary damage over 10 seconds.</value>
-    <comment>Unfinished</comment>
+    <value>Burns for &lt;style=cIsDamage&gt;2.0x primary damage&lt;/style&gt; over 10 seconds\n&lt;&gt; &lt;style=cIsDamage&gt;Total Damage &lt;indent=40%&gt;+2.0x&lt;/style&gt; per &lt;style=cIsUtility&gt;Boost&lt;/style&gt;&lt;/indent&gt;\n&lt;&gt; &lt;style=cIsDamage&gt;Duration &lt;indent=40%&gt;+10s&lt;/style&gt; per &lt;style=cIsUtility&gt;sqrt(Boost)&lt;/style&gt;&lt;/indent&gt;</value>
   </data>
   <data name="lang__SNIPER_AMMO_PLASMA_NAME" xml:space="preserve">
     <value>Plasma</value>
-    <comment>Unfinished</comment>
   </data>
   <data name="lang__SNIPER_AMMO_SHOCK_DESC" xml:space="preserve">
     <value>Chains to enemies near your target</value>
@@ -227,7 +225,7 @@
     <value>Full Metal Jacket</value>
   </data>
   <data name="lang__SNIPER_DESC" xml:space="preserve">
-    <value>Sniper is a long ranged, single-target dps that incorperates elements of an assassin to stay alive.\n
+    <value>Sniper is a long ranged, single-target dps.\n
 
 They excel at taking down bosses and high priority targets but struggle against larger groups of weak enemies.\n</value>
     <comment>Elaborate</comment>
@@ -285,12 +283,10 @@ They excel at taking down bosses and high priority targets but struggle against 
     <comment>Unfinished</comment>
   </data>
   <data name="lang__SNIPER_PRIMARY_MAG_DESC" xml:space="preserve">
-    <value />
-    <comment>Unfinished</comment>
+    <value>Shoot enemies for &lt;style=cIsDamage&gt;250% to 375%&lt;/style&gt; damage. Must be &lt;style=cIsUtility&gt;reloaded&lt;/style&gt; every 4 shots. Reloading at the right time &lt;style=cIsDamage&gt;increases damage&lt;/style&gt;.</value>
   </data>
   <data name="lang__SNIPER_PRIMARY_MAG_NAME" xml:space="preserve">
-    <value />
-    <comment>Unfinished</comment>
+    <value>Mag</value>
   </data>
   <data name="lang__SNIPER_PRIMARY_MAG_RELOAD_DESC" xml:space="preserve">
     <value />
